@@ -1,3 +1,8 @@
+2003-09-15  Christophe Fergeau  <teuf@gnome.org>
+ 
+         * modules/http-method.c: define INET_ADDRSTRLEN if it's not defined
+           in the system headers (fixes #121720)
+
 2003-09-12  Alexander Larsson  <alexl@redhat.com>
 
 	* HACKING:
